--- a/css/style.css
+++ b/css/style.css
@@ -58,8 +58,14 @@ a:hover{
 .head-wrapper{
     background-color: var(--color-header);
     padding: 20px 0;
-    /* position: fixed; */
+    position: fixed;
     width: 100%;
+    top: 0;
+    z-index: 1000;
+}
+
+.head-wrapper .container{
+    padding: 0 10px;
 }
 
 #logo{
@@ -69,7 +75,7 @@ a:hover{
 /* main */
 
 main{
-    margin-top: 80px;
+    padding-top: 150px;
 }
 
 .card-container{
