--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body{
 .container{
     max-width: 1200px;
     margin: 0 auto;
+    padding: 0 5px;
 }
 
 ul{
@@ -62,6 +63,7 @@ a:hover{
     width: 100%;
     top: 0;
     z-index: 1000;
+    box-shadow: 0 1px 3px #666;
 }
 
 .head-wrapper .container{
@@ -69,7 +71,15 @@ a:hover{
 }
 
 #logo{
-    width: 130px;
+    max-width: 130px;
+}
+
+nav.container div{
+    width: 20%;
+} 
+
+.icons{
+    justify-content: flex-end;
 }
 
 /* main */
